Added new config spaces Added config for changing the batch_interval i.e. the wait time after completing all of the channels as well as the single_interval, a setting for changing the wait time after completing a single channel and moving onto the next one.

--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,17 @@
 {
   "global": {
-  	"authenticateMongo":  false 
+    "authenticateMongo":  false,
+    "batchInterval": 3.0,
+    "singleInterval": 0 
   },
   "seedServer": {
-  	"address": "10.0.160.99",
-  	"port": 18000,
-  	"channels": ["HHZ", "HHN", "HHE", "EHZ"]
+    "address": "10.0.160.99",
+    "port": 18000,
+    "channels": ["HHZ", "HHN", "HHE", "EHZ"]
   },
   "mongoServer": {
-  	"address": "10.0.160.101",
-  	"port": 27017,
-  	"databaseName": "seeddata"
+    "address": "10.0.160.101",
+    "port": 27017,
+    "databaseName": "seeddata"
   }
 }
